# marketeer

./: README.md  build.sh  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
public/: help.html
src/: App.vue  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: esi.rs  lib.rs  main.rs  market.rs  watcher.rs
src/assets/: styles.css
src/components/: EmptyState.vue  ItemDetails.vue  OrderBook.vue  PriceCard.vue  PriceChart.vue  TitleBar.vue  Toolbar.vue
src/stores/: market.ts
